[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/audio/Tempo.wav" type="AudioStream" id=1]
[ext_resource path="res://assets/audio/Tache.wav" type="AudioStream" id=2]
[ext_resource path="res://scripts/Buttons.gd" type="Script" id=3]

[node name="Buttons" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -540.0
alignment = 1
script = ExtResource( 3 )

[node name="Tempo" type="Button" parent="."]
margin_left = 58.0
margin_right = 158.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
text = "Tempo"

[node name="TempoSound" type="AudioStreamPlayer2D" parent="Tempo"]
position = Vector2( -57, -270 )
stream = ExtResource( 1 )

[node name="Tache" type="Button" parent="."]
margin_left = 162.0
margin_right = 262.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
text = "Tache"

[node name="TacheSound" type="AudioStreamPlayer2D" parent="Tache"]
position = Vector2( -161, -270 )
stream = ExtResource( 2 )

[connection signal="pressed" from="Tempo" to="." method="_on_Tempo_pressed"]
[connection signal="pressed" from="Tache" to="." method="_on_Tache_pressed"]
